--- a/webexam2024/index.html
+++ b/webexam2024/index.html
@@ -167,18 +167,38 @@
         <p class="underText">Suspendisse ullamcorper eget ad praesent sodales maximus dolor.</p>
         <address class="contactInfoFlexContainer">
             <h2 class="headText mediumBold marginTop">Kontakt</h2>
-            <img class="iconSize" src="addressIcon.png" alt="address icon">
-                <p class="underText lightBold removeMargin"><b>Adresse:</b> B R A Veien 4, 1757 Halden</p>
-            <img/>
-            <img class="iconSize" src="phoneIcon.png" alt="phone icon">
-                <p class="underText lightBold removeMargin"><b>Telefon:</b> <a href="tel:69 60 80 00">69 60 80 00</a></p>
-            <img/>
-            <img class="iconSize" src="emailIcon.png" alt="email icon">
-                <p class="underText lightBold removeMargin"><b>E-post:</b> <a href="mailto:halden@hiof.no">halden@hiof.no</a></p>
-            <img/>
-            <img class="iconSize" src="clockIcon.png" alt="clock icon">
-                <p class="underText lightBold removeMargin"><b>Åpningstider:</b> Stenger 15:00</p>
-            <img/>
+            <section>
+                <img class="iconSize" src="addressIcon.png" alt="address icon">
+                    <p class="underText lightBold removeMargin"><b>Adresse:</b> B R A Veien 4, 1757 Halden</p>
+                <img/>
+            </section>
+            <section>
+                <img class="iconSize" src="phoneIcon.png" alt="phone icon">
+                    <p class="underText lightBold removeMargin"><b>Telefon:</b> <a href="tel:69 60 80 00">69 60 80 00</a></p>
+                <img/>
+            </section>
+            <section>
+                <img class="iconSize" src="emailIcon.png" alt="email icon">
+                    <p class="underText lightBold removeMargin"><b>E-post:</b> <a href="mailto:halden@hiof.no">halden@hiof.no</a></p>
+                <img/>
+            </section>
+            <section>
+                <img class="iconSize" src="clockIcon.png" alt="clock icon">
+                    <p class="underText lightBold removeMargin"><b>Åpningstider:</b> Stenger 15:00</p>
+                <img/>
+            </section>
+        </address>
+        <address class="contactInfoFlexContainer">
+            <h2 class="headText mediumBold marginTop">Snarveier</h2>
+            <h3 class="underText removeMargin">Produkter</h3>
+            <h3 class="underText removeMargin">Kategorier</h3>
+            <h3 class="underText removeMargin">Kontakt Oss</h3>
+        </address>
+        <address class="contactInfoFlexContainer">
+            <img class="iconSize marginTop" src="instagramIcon.png" alt="instagram icon"><img>
+            <img class="iconSize" src="facebookIcon.png" alt="facebook icon"><img>
+            <img class="iconSize" src="linkedinIcon.png" alt="linkedin icon"><img>
+            <img class="iconSize" src="pinterestIcon.png" alt="pinterest icon"><img>
         </address>
     </footer>
 </body>
