--- a/webexam2024/index.html
+++ b/webexam2024/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Page Title</title>
+    <title>Forside</title>
 </head>
 <body id="grid-container">
         <header>
@@ -48,42 +48,42 @@
             <div class="productArticleFlexContainer">
                 <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
                         <figcaption>Product name</figcaption>
                     </figure>
                     <p>Kr 1999</p>
                 </article>
                 <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
                         <figcaption>Product name</figcaption>
                     </figure>
                     <p>Kr 1999</p>
                 </article>
                 <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
                         <figcaption>Product name</figcaption>
                     </figure>
                     <p>Kr 1999</p>
                 </article>
                 <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
                         <figcaption>Product name</figcaption>
                     </figure>
                     <p>Kr 1999</p>
                 </article>
                 <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
                         <figcaption>Product name</figcaption>
                     </figure>
                     <p>Kr 1999</p>
                 </article>
                                     <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image"><img/>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
                         <figcaption>Product name</figcaption>
                     </figure>
                     <p>Kr 1999</p>
@@ -116,7 +116,7 @@
             <div class="reviewsFlexContainer">
                 <article class="reviewsFlexItem">
                     <figure>
-                        <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture"><img/>
+                        <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture">
                     </figure>
                     <h3>Rober Labrador</h3>
                     <p>Suspendisse ullamcorper eget ad praesent sodales maximus dolor. Volutpat blandit sollicitudin 
@@ -127,7 +127,7 @@
                 </article>
                 <article class="reviewsFlexItem">
                     <figure>
-                        <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture"><img/>
+                        <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture">
                     </figure>
                     <h3>Rober Labrador</h3>
                     <p>Suspendisse ullamcorper eget ad praesent sodales maximus dolor. Volutpat blandit sollicitudin 
@@ -138,7 +138,7 @@
                 </article>
                 <article class="reviewsFlexItem">
                     <figure>
-                        <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture"><img/>
+                        <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture">
                     </figure>
                     <h3>Rober Labrador</h3>
                     <p>Suspendisse ullamcorper eget ad praesent sodales maximus dolor. Volutpat blandit sollicitudin 
@@ -149,7 +149,7 @@
                 </article>
                 <article class="reviewsFlexItem">
                     <figure>
-                        <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture"><img/>
+                        <img src="https://fastly.picsum.photos/id/89/200/200.jpg?hmac=urh6JbqBxFLcQQEPfUQ23bUlEH7vg3qqqUOts86_LLI" alt="user profile picture">
                     </figure>
                     <h3>Rober Labrador</h3>
                     <p>Suspendisse ullamcorper eget ad praesent sodales maximus dolor. Volutpat blandit sollicitudin 
@@ -165,40 +165,37 @@
         <hr>
         <h2 class="headText mediumBold">Logo</h2>
         <p class="underText">Suspendisse ullamcorper eget ad praesent sodales maximus dolor.</p>
-        <address class="contactInfoFlexContainer">
+        <section class="contactInfoFlexContainer">
             <h2 class="headText mediumBold marginTop">Kontakt</h2>
-            <section>
+            <address>
                 <img class="iconSize" src="addressIcon.png" alt="address icon">
                     <p class="underText lightBold removeMargin"><b>Adresse:</b> B R A Veien 4, 1757 Halden</p>
-                <img/>
-            </section>
-            <section>
+            </address>
+            <address>
                 <img class="iconSize" src="phoneIcon.png" alt="phone icon">
-                    <p class="underText lightBold removeMargin"><b>Telefon:</b> <a href="tel:69 60 80 00">69 60 80 00</a></p>
-                <img/>
-            </section>
-            <section>
+                    <p class="underText lightBold removeMargin"><b>Telefon:</b> <a href="tel:69608000">69 60 80 00</a></p>
+            </address>
+            <address>
                 <img class="iconSize" src="emailIcon.png" alt="email icon">
                     <p class="underText lightBold removeMargin"><b>E-post:</b> <a href="mailto:halden@hiof.no">halden@hiof.no</a></p>
-                <img/>
-            </section>
-            <section>
+            </address>
+            <address>
                 <img class="iconSize" src="clockIcon.png" alt="clock icon">
                     <p class="underText lightBold removeMargin"><b>Åpningstider:</b> Stenger 15:00</p>
-                <img/>
-            </section>
-        </address>
+            </address>
+        </section>
+        <h2 class="headText mediumBold marginTop">Snarveier</h2>
         <address class="contactInfoFlexContainer">
-            <h2 class="headText mediumBold marginTop">Snarveier</h2>
-            <h3 class="underText removeMargin">Produkter</h3>
-            <h3 class="underText removeMargin">Kategorier</h3>
-            <h3 class="underText removeMargin">Kontakt Oss</h3>
+            <p class="underText removeMargin">Produkter</p>
+            <p class="underText removeMargin">Kategorier</p>
+            <p class="underText removeMargin">Kontakt Oss</p>
         </address>
+        <h2 class="headText mediumBold marginTop removeMarginBottom">SOSIALE MEDIER</h2>
         <address class="contactInfoFlexContainer">
-            <img class="iconSize marginTop" src="instagramIcon.png" alt="instagram icon"><img>
-            <img class="iconSize" src="facebookIcon.png" alt="facebook icon"><img>
-            <img class="iconSize" src="linkedinIcon.png" alt="linkedin icon"><img>
-            <img class="iconSize" src="pinterestIcon.png" alt="pinterest icon"><img>
+            <img class="iconSize marginTop" src="instagramIcon.png" alt="instagram icon">
+            <img class="iconSize" src="facebookIcon.png" alt="facebook icon">
+            <img class="iconSize" src="linkedinIcon.png" alt="linkedin icon">
+            <img class="iconSize" src="pinterestIcon.png" alt="pinterest icon">
         </address>
     </footer>
 </body>
