--- a/webexam2024/produkt.html
+++ b/webexam2024/produkt.html
@@ -28,80 +28,81 @@
         </nav>
     </header>
     <main>
-    <h1 class="mediumBold">Kasse</h1>
-    <h2 class="mediumBold largeFont marginTop">1. SHOPPINGBAGEN DIN</h2>
-    <section>
-        <div class="productArticleFlexContainer">
-            <article>
-                <figure class="productImage">
-                    <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
-                    <figcaption>Product name</figcaption>
-                </figure>
-                <p class="removeMargin">Kr 1999</p>
-                <p class="removeMargin">Farge: beige</p>
+    <p class="breadCrumbs removeMarginBottom">Hjem  >  Kategori  >  <b>Produktnavn</b></p>
+    <div class="productArticleFlexContainer">
+        <article>
+            <figure class="productImage removeMargin">
+                <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
+            </figure>
+        </article>
+        <article>
+            <figure class="productImage removeMargin">
+                <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
+            </figure>
+        </article> 
+        <article>
+            <figure class="productImage removeMargin">
+                <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
+            </figure>
+        </article> 
+        <article>
+            <figure class="productImage removeMargin">
+                <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
+            </figure>
+        </article> 
+        <details open="open">
+            <summary class="productHeader headText detailsStyling marginTop marginBottom">Produkt navn</summary>
+            <a href="" class="merkenavn lightBold"><u>MERKERNAVN</u></a>
+            <p class="underText">5 195 kr inkl. mva.</p>
+            <p class="underText removeMarginTop marginBottom">Farge: <b>beige</b></p>
+        </details>
+
+        <div class="lignendeProdukterFlexBox">
+            <h2 class="productHeader headText removeMarginBottom">Lignende produkter</h2>
+            <article class="productImage">
+                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <section class="alignItemsRow">
+                    <p class="largeFontOverride">Produktnavn</p>
+                    <p>Kr 1999</p>
+                </section>
             </article>
-            <article>
-                <figure class="productImage">
-                    <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
-                    <figcaption>Product name</figcaption>
-                </figure>
-                <p class="removeMargin">Kr 1999</p>
-                <p class="removeMargin">Farge: beige</p>
+            <article class="productImage">
+                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <section class="alignItemsRow">
+                    <p class="largeFontOverride">Produktnavn</p>
+                    <p>Kr 1999</p>
+                </section>
             </article>
-            <article>
-                <figure class="productImage">
-                    <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
-                    <figcaption>Product name</figcaption>
-                </figure>
-                <p class="removeMargin">Kr 1999</p>
-                <p class="removeMargin">Farge: beige</p>
+            <article class="productImage">
+                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <section class="alignItemsRow">
+                    <p class="largeFontOverride">Produktnavn</p>
+                    <p>Kr 1999</p>
+                </section>
+            </article>
+            <article class="productImage">
+                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <section class="alignItemsRow">
+                    <p class="largeFontOverride">Produktnavn</p>
+                    <p>Kr 1999</p>
+                </section>
+            </article>
+            <article class="productImage">
+                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <section class="alignItemsRow">
+                    <p class="largeFontOverride">Produktnavn</p>
+                    <p>Kr 1999</p>
+                </section>
+            </article>
+            <article class="productImage">
+                <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
+                <section class="alignItemsRow">
+                    <p class="largeFontOverride">Produktnavn</p>
+                    <p>Kr 1999</p>
+                </section>
             </article>
         </div>
-        <h2 class="mediumBold largeFont marginTop">2. DINE OPPLYSNINGER</h2>
-        <h3>Leveringsadresse</h3>
-        <form class="opplysningerFlexContainer">
-            <input class="opplysningerFlexItem" type="text" placeholder="Fornavn*">
-            <input class="opplysningerFlexItem" type="text" placeholder="Etternavn*">
-            <input class="opplysningerFlexItem" type="text" placeholder="Gateadresse*">
-            <input class="opplysningerFlexItem" type="text" placeholder="Postnummer*">
-            <input class="opplysningerFlexItem" type="text" placeholder="By*">
-        </form>
-        <button class="lagreButton marginTop marginBottom">Lagre</button><br>
-        <a>Avbryt</a>
-        <h2 class="mediumBold largeFont marginTop">3. LEVERING</h2>
-        <h3>LEVERINGSVALG</h3>
-        <form class="flexContainerLeveranse">
-            <input type="radio" id="ekspressHjemlevering" name="deliveryOption" value="ekspressHjemlevering">
-            <label for="ekspressHjemlevering">Ekspress Hjemlevering</label><br>
-            <input class="marginTop" type="radio" id="EkspressPakkeTilUtleveringssted" name="deliveryOption" value="EkspressPakkeTilUtleveringssted">
-            <label for="EkspressPakkeTilUtleveringssted">Ekspress Pakke Til Utleveringssted</label><br>
-            <input class="marginTop" type="radio" id="standardHjemlevering" name="deliveryOption" value="standardHjemlevering">
-            <label for="standardHjemlevering">Standard Hjemlevering</label><br>
-        </form>
-        <h2 class="mediumBold largeFont marginTop">4. BETALING</h2>
-        <h3>BETAL MED KORT</h3>
-        <form class="opplysningerFlexContainer">
-            <p class="removeMargin">Kortnummer</p>
-            <input class="betalningFlexItem" type="text" placeholder="342342****4435">
-            <p class="removeMargin">Utløpsdato</p>
-            <input class="betalningFlexItem" type="text" placeholder="mm/dd/yyyy">
-            <p class="removeMargin">CVC/CVV</p>
-            <input class="betalningFlexItem" type="text" placeholder="CVC/CVV">
-        </form>
-        <p class="removeMargin">Å betale inkl. mva.</p>
-        <p class="removeMargin">1 199 kr</p>
-        <button class="lagreButton marginTop marginBottom">Fullfør kjøp</button><br>
-        <p class="removeMargin">Du bekrefter herved at opplysningene og dokumentene du har oppgitt er korrekte og fullstendige. 
-            Leverandøren forbeholder seg retten til å heve eller avslutte avtaleforholdet dersom det foreligger 
-            uriktige eller ufullstendige opplysninger.
-        </p>
-        <form>
-            <input class="marginTop" type="checkbox" id="nyhetsbrev" name="nyhetsbrev" value="nyhetsbrev">
-            <label for="nyhetsbrev">Ja Takk! Send nyhetsbrev til meg.</label><br>
-            <input type="checkbox" id="tekstmeldinger" name="tekstmeldinger" value="tekstmeldinger">
-            <label for="tekstmeldinger">Jeg ønsker å motta tekstmeldinger med tilbud of nyheter.</label><br>
-        </form>
-    </section>
+    </div>
     </main>
     <footer>
         <hr>
