--- a/webexam2024/index.html
+++ b/webexam2024/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Forside</title>
+    <title>Forrside</title>
 </head>
 <body id="grid-container">
         <header>
@@ -41,50 +41,50 @@
             <h2 class="productHeader headText">Våre mest populære produkter</h2>
             <p class="productUnderText underText">Oppdag det beste av det beste</p>
             <nav class="buttonsFlexContainer">
-                <button class="productButton">New Products</button>
-                <button class="productButton">Special Price</button>
-                <button class="productButton">Best Sellers</button>
+                <button class="productButton">Nye Produkter</button>
+                <button class="productButton">Spesialpris</button>
+                <button class="productButton">Bestselgere</button>
             </nav>  
             <div class="productArticleFlexContainer">
                 <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
-                        <figcaption>Product name</figcaption>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="produkt bilde">
+                        <figcaption>Produkt navn</figcaption>
                     </figure>
                     <p>Kr 1999</p>
                 </article>
                 <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
-                        <figcaption>Product name</figcaption>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="produkt bilde">
+                        <figcaption>Produkt navn</figcaption>
                     </figure>
                     <p>Kr 1999</p>
                 </article>
                 <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
-                        <figcaption>Product name</figcaption>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="produkt bilde">
+                        <figcaption>Produkt navn</figcaption>
                     </figure>
                     <p>Kr 1999</p>
                 </article>
                 <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
-                        <figcaption>Product name</figcaption>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="produkt bilde">
+                        <figcaption>Produkt navn</figcaption>
                     </figure>
                     <p>Kr 1999</p>
                 </article>
                 <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
-                        <figcaption>Product name</figcaption>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="produkt bilde">
+                        <figcaption>Produkt navn</figcaption>
                     </figure>
                     <p>Kr 1999</p>
                 </article>
                                     <article>
                     <figure class="productImage">
-                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="product image">
-                        <figcaption>Product name</figcaption>
+                        <img src="https://fastly.picsum.photos/id/187/1200/1200.jpg?hmac=5HU5dSQw1jyM7vHatXkf84ROV_qbFOoqgbVO6-5WIhk" alt="produkt bilde">
+                        <figcaption>Produkt navn</figcaption>
                     </figure>
                     <p>Kr 1999</p>
                 </article>
@@ -95,19 +95,19 @@
             <p class="underText">Oppdag det beste av det beste</p>
             <div class="categoryFlexContainer">
                 <article class="categoryItem">
-                    <h2>Category 1</h2>
+                    <h2>Kategori 1</h2>
                 </article>
                 <article class="categoryItem">
-                    <h2>Category 2</h2>
+                    <h2>Kategori 2</h2>
                 </article>
                 <article class="categoryItem2">
-                    <h2>Category 3</h2>
+                    <h2>Kategori 3</h2>
                 </article>
                 <article class="categoryItem">
-                    <h2>Category 4</h2>
+                    <h2>Kategori 4</h2>
                 </article>
                 <article class="categoryItem">
-                    <h2>Category 5</h2>
+                    <h2>Kategori 5</h2>
                 </article>
             </div>
         </section>
