--- a/webexam2024/kasse.html
+++ b/webexam2024/kasse.html
@@ -35,7 +35,7 @@
             <article>
                 <figure class="productImage">
                     <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
-                    <figcaption>Product name</figcaption>
+                    <figcaption>Produkt navn</figcaption>
                 </figure>
                 <p class="removeMargin">Kr 1999</p>
                 <p class="removeMargin">Farge: beige</p>
@@ -43,7 +43,7 @@
             <article>
                 <figure class="productImage">
                     <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
-                    <figcaption>Product name</figcaption>
+                    <figcaption>Produkt navn</figcaption>
                 </figure>
                 <p class="removeMargin">Kr 1999</p>
                 <p class="removeMargin">Farge: beige</p>
@@ -51,7 +51,7 @@
             <article>
                 <figure class="productImage">
                     <img src="https://fastly.picsum.photos/id/21/3008/2008.jpg?hmac=T8DSVNvP-QldCew7WD4jj_S3mWwxZPqdF0CNPksSko4" alt="product image">
-                    <figcaption>Product name</figcaption>
+                    <figcaption>Produkt navn</figcaption>
                 </figure>
                 <p class="removeMargin">Kr 1999</p>
                 <p class="removeMargin">Farge: beige</p>
@@ -67,7 +67,7 @@
             <input class="opplysningerFlexItem" type="text" placeholder="By*">
         </form>
         <button class="lagreButton marginTop marginBottom">Lagre</button><br>
-        <a>Avbryt</a>
+        <a><u>Avbryt</u></a>
         <h2 class="mediumBold largeFont marginTop">3. LEVERING</h2>
         <h3>LEVERINGSVALG</h3>
         <form class="flexContainerLeveranse">
